# o80_pam

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
demos/: burst_demo.py  demo.py  dummy_standalone.py  duration_command.py  reading_observations_demo.py  speed_command.py
include/O8O_pam/: actuator_state.hpp  dummy_robot.hpp  extended_state.hpp  factory.hpp  o8o_pam_actuator_state.hpp  pam_standalone.hpp  pam_standalone.hxx  pressure_state.hpp  standalone.hpp  standalone.hxx
include/o80_pam/: actuator_state.hpp  dummy_driver.hpp  dummy_robot.hpp  extended_state.hpp  factory.hpp  pam_actuator_state.hpp  pamy1_driver.hpp  pamy2_driver.hpp  pressure_state.hpp  real_driver.hpp  robot_fk_extended_state.hpp  standalone.hpp  standalone.hxx
python/o80_pam/: __init__.py  joint_position_controller.py  logger.py  mirroring.py  mujoco_id.py  o80_ball.py  o80_goal.py  o80_hit_point.py  o80_pressures.py  o80_real_ball.py  o80_robot_mirroring.py  o80_target.py  observation_convertors.py  position_control.py  ratio_controller.py  robot_ball_parser.py  run_robot.py  segment_ids.py
scripts/: o80_pam_console.py  o80_pam_plotting.py
src/: actuator_state.cpp  dummy_follower.cpp  dummy_frontend.cpp  dummy_leader.cpp  dummy_mirror.cpp  dummy_standalone.cpp  dummy_sync.cpp  frequency.cpp  o8o_pam_actuator_state.cpp  pressure_state.cpp  robot_fk_extended_state.cpp
srcpy/: wrappers.cpp
tests/: test_logger.py  test_observation_conversions.py  test_position_control.py
utils/: pam_py_console  pam_py_plotting  plotting  print_status.py  set_dof_0_to_15000  speed  status  up_down  wait_for_completion
